k8s-resources/heapster/grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - grafana.tools.analytics.kops.integration.dsd.io
    secretName: monitoring-grafana-tls
  rules:
  - host: grafana.tools.analytics.kops.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: monitoring-grafana
          servicePort: 80
        path: /
